test/units/TypingSpec/invalid/prog/untyped-lam-call-1.algst
-- FIXME: if we could get this to work, this would be great. However, this
-- conflicts with implicit resolution.
double : Int -> Int
double x = (\i -> i * 2) x
